# roleiq

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml
apps/api/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 20260316_0001_initial.py
apps/api/app/: main.py
apps/api/app/api/routes/: analyses.py
apps/api/app/core/: config.py
apps/api/app/db/: session.py  types.py
apps/api/app/models/: __init__.py  analysis.py  job.py  resume.py
apps/api/app/schemas/: analysis.py  common.py  domain.py  llm.py
apps/api/app/services/: analysis_pipeline.py  document_ingestion.py  embeddings.py  heuristics.py  job_parser.py  matching.py  normalization.py  openai_client.py  resume_parser.py  scoring.py  suggestions.py
apps/api/app/utils/: dates.py  text.py
apps/api/tests/: conftest.py  helpers.py  test_api.py  test_documents.py  test_matching.py  test_normalization.py  test_schema_validation.py  test_scoring.py  test_sections.py  test_suggestions.py
apps/web/: Dockerfile  package.json  tailwind.config.ts  tsconfig.json
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/app/analyses/: page.tsx
apps/web/app/analyses/[id]/: page.tsx
apps/web/app/analyses/new/: page.tsx
apps/web/components/analysis/: analysis-detail.tsx  analysis-form.tsx  analysis-history.tsx  evidence-panel.tsx  parsed-data.tsx  requirement-list.tsx  score-breakdown.tsx  suggestions-panel.tsx
apps/web/components/ui/: badge.tsx  button.tsx  card.tsx  tabs.tsx
apps/web/lib/: api.ts  types.ts  utils.ts
